# winoe-ai-backend

./: .env.example  .gitignore  Procfile  README.md  YC_DEMO_CHECKLIST.md  coverage.json  issue196.patch  pr.md  precommit.sh  pyproject.toml  ruff.toml  runBackend.sh
.github/workflows/: backend-ci.yml
alembic/versions/: 202504010001_rename_execution_profiles_to_winoe_reports.py  202504010002_update_template_repos_to_winoe.py  202505200001_update_template_repos_to_winoe_hire_dev.py  202506010001_add_unique_candidate_session_invite.py  202506150001_remove_candidate_otp_fields.py  202603030002_add_trial_lifecycle_state_machine.py  202603040001_add_trial_context_columns.py  202603040002_add_simulation_termination_metadata.py  202603080001_add_workspace_groups_for_unified_coding_repo.py  202603080002_enforce_unique_workspace_group_workspace.py  202603080003_add_submission_checkpoint_final_sha.py  202603090001_add_scenario_versions_and_locking.py  202603090003_add_scenario_edit_audit.py  202603100001_add_precommit_bundles_and_workspace_precommit_sha.py  202603100002_add_workspace_precommit_details_json.py  202603100003_add_recording_assets_and_transcripts.py  (+32 more)
docs/: ai_evaluation_jobs_integration.md  api.md  architecture_overview.md  codespaces_actions.md  data_model_relationships.md  github_integration.md  simulation_lifecycle.md  system_overview.md  trial_lifecycle.md
qa_verifications/: README.md
scripts/: check_fresh_migrations.py  check_no_legacy_active_refs.sh  check_no_legacy_demo_refs.sh  code_quality_harness.py  code_quality_harness_args.py  local_demo_smoke_test.py  local_qa_backend.sh  perf_capture_from_tests.py  perf_capture_from_tests_cli.py  perf_capture_from_tests_common.py  perf_capture_from_tests_external.py  perf_capture_from_tests_http.py  perf_capture_from_tests_inventory.py  perf_capture_from_tests_plugin.py  perf_capture_from_tests_sqlalchemy.py  perf_capture_from_tests_summary.py  perf_capture_jobs_args.py  perf_capture_jobs_from_tests.py  perf_capture_jobs_plugin.py  perf_capture_jobs_state.py  perf_capture_jobs_stats.py  perf_generate_pass_report.py  perf_generate_pass_report_cli.py  perf_generate_pass_report_common.py  perf_generate_pass_report_inventory.py  perf_generate_pass_report_markdown.py  perf_generate_pass_report_markdown_metrics.py  perf_generate_pass_report_markdown_notes.py  perf_generate_pass_report_rows.py  perf_generate_pass_report_touchpoints.py  perf_guardrails.py  perf_guardrails_args.py  perf_guardrails_eval.py  perf_guardrails_io.py  perf_hotpath_load.py  perf_hotpath_load_capture.py  perf_hotpath_load_cli.py  perf_hotpath_load_manifest.py  perf_hotpath_load_markdown.py  perf_hotpath_load_runner.py  (+12 more)
tests/: README.md  conftest.py
(+3789 files in other folders)
